--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
+    <string name="AIzaSyDirGqsM5RboJUT04nimc_CIEGquVbxiQ8">Map API key</string>
     <string name="menu_home">Home</string>
     <string name="menu_cart">Cart</string>
     <string name="menu_order">Order</string>
